# p-adic-neural-network

./: CMakeLists.txt  LICENSE  README.md
plot/: interactive_runner.py  py_plot.py  testing_tool.py
src/: main.cpp  neural_network.cpp  neural_network.h  neuron.cpp  neuron.h  py_plot.h  test.cpp  test_boolean.h  test_cancer_diseases.h  test_heart_diseases.h  test_plot.h  test_utils.h  utils.cpp  utils.h
